--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,55 @@
+:root {
+  --color1: #2a2a2a;
+  --color2: #f3d25d;
+
+  --color1hover: #080808;
+  --color2hover: #ffdf6e;
+
+  --margin: 1rem;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Staatliches", cursive, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+a {
+  color: none;
+  text-decoration: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+h5 {
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+h2 {
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+h1 {
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+label,
+input,
+a {
+  pointer-events: all;
+  cursor: pointer;
+}
+button {
+  border: none;
+  pointer-events: all;
+  cursor: pointer;
+  outline: 0;
+}
+.text {
+  font-family: "Noto Sans SC", sans-serif;
 }
